word wrap issue

--- a/css/style.css
+++ b/css/style.css
@@ -221,7 +221,7 @@ line-height: 46px;
   font-size: 18px;
   max-width: 300px;
   overflow: visible;
-  white-space: wrap;
+  white-space: normal;
 }
 
 .upperright-carousel {
